--- a/src/Components/Practice.css
+++ b/src/Components/Practice.css
@@ -13,6 +13,31 @@
     gap: 30px;
     padding-bottom: 40px;
 }
+.todo{
+    width: 100%;
+    height: 0;
+    background-color: white;
+    border-radius: 30px;
+    transition: all 1s ease;
+}
+.todo-sub{
+    height: 10vh;
+}
+.list{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+.join{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+.bind{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
 .content{
     width: 100%;
     display: flex;
