--- a/src/Components/Practice.css
+++ b/src/Components/Practice.css
@@ -13,30 +13,77 @@
     gap: 30px;
     padding-bottom: 40px;
 }
-.todo{
+.aliner{
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.todo{
+    width: 85%;
     height: 0;
+    display: flex;
+    flex-direction: row;
     background-color: white;
-    border-radius: 30px;
+    border-radius: 10px;
     transition: all 1s ease;
+    position: absolute;
+    top: 15%;
+    opacity: 0;
+    padding: 20px;
+    gap: 20px;
 }
 .todo-sub{
     height: 10vh;
+    opacity: 1;
 }
 .list{
-    width: 100%;
+    /* width: 100%; */
     display: flex;
     flex-direction: row;
 }
 .join{
-    width: 100%;
+    /* width: 100%; */
     display: flex;
     flex-direction: row;
 }
 .bind{
-    width: 100%;
+    /* width: 100%; */
     display: flex;
     flex-direction: row;
+    background-color: rgb(239,250,250);
+    height: 5vh;
+    align-items: center;
+    border-radius: 5px;
+}
+.bind span{
+    padding: 10px;
+    color: rgb(84,164,159);
+    font-weight: 800;
+}
+.bind button{
+    height: 100%;
+    background-color: rgb(84,164,159);
+    color: white;
+    border: none;
+    padding: 0 10px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+.bind button:hover{
+    background-color: rgb(40,57,56);
+}
+.clear-button{
+    margin-left: auto;
+    color: rgb(84,164,159);
+    border: none;
+    background-color: transparent;
+    font-weight: 800;
+    cursor: pointer;
+}
+.clear-button:hover{
+    text-decoration: underline;
 }
 .content{
     width: 100%;
@@ -89,8 +136,13 @@
     gap: 10px;
 
 }
-.enclosure h3:hover{
+.enclosure span {
+    font-size: 18px;
+    /* font-weight: 600; */
+}
+.enclosure span:hover{
     color: hsl(180, 29%, 50%);
+
 }
 .top{
     width: 100%;
@@ -199,6 +251,13 @@
         flex-direction: column;
         padding: 0;
         padding: 0 20px;
+    }
+    .todo{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .todo-sub{
+        min-height: 20vh;
     }
     .enclosure{
         padding-top: 25px;
