--- a/src/Components/Practice.css
+++ b/src/Components/Practice.css
@@ -253,11 +253,14 @@
         padding: 0 20px;
     }
     .todo{
+        position: relative;
+        min-height: 0;
+        top: 0;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
     }
     .todo-sub{
-        min-height: 20vh;
+        min-height: 30vh;
     }
     .enclosure{
         padding-top: 25px;
@@ -280,6 +283,15 @@
     .picture{
         height: 50px;
         padding-left: 20px;
+
+    }
+    .bind{
+       width: 0;
+    }
+    .bind span{
+        background-color: rgb(239,250,250);
+        padding: 3px 10px;
+        height: 100%;
 
     }
 }
