--- a/src/Components/Practice.css
+++ b/src/Components/Practice.css
@@ -103,7 +103,7 @@
     flex-direction: column;
     gap: 30px;
 }
-.container{
+/* .container{
     width: 100%;
     min-height: 10vh;
     display: flex;
@@ -113,10 +113,10 @@
     padding-left: 20px;
     box-shadow: 0px 4px 4px hsl(180, 8%, 52%);
     border-left: 5px solid white;
-}
-.container:hover{
+} */
+/* .container:hover{
     border-left: 5px solid hsl(180, 29%, 50%);
-}
+} */
 .first{
     min-height: 10vh;
     width: 100%;
