--- a/src/Components/Practice.css
+++ b/src/Components/Practice.css
@@ -113,8 +113,8 @@
     padding-left: 20px;
     box-shadow: 0px 4px 4px hsl(180, 8%, 52%);
     border-left: 5px solid white;
-} */
-/* .container:hover{
+}
+.container:hover{
     border-left: 5px solid hsl(180, 29%, 50%);
 } */
 .first{
